[package]
name = "mrdt_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
fxhash = "0.2.1"
musli = { version = "0.0.122", features = ["storage"] }
rand = "0.8.5"
scylla = "0.13.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5.1"
rb_tree = "0.5.0"
im = "15.1.0"

[[bench]]
name = "collections"
harness = false

[[bench]]
name = "merge"
harness = false

[[bench]]
name = "merge_base"
harness = false
