[package]
name = "mrdt_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
fxhash = "0.2.1"
itertools = "0.13.0"
musli = { version = "0.0.122", features = ["storage"] }
rand = "0.8.5"
scylla = "0.13.0"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5.1"
rb_tree = "0.5.0"
im = "15.1.0"
clap = { version = "4.5.9", features = ["derive"] }

[profile.release]
debug = true

[[bench]]
name = "collections"
harness = false

[[bench]]
name = "merge"
harness = false

[[bench]]
name = "merge_base"
harness = false

[[bench]]
name = "document"
harness = false

[[bin]]
name = "profile_merge"
path = "src/bin/profile_merge.rs"
